# Ragflix

./: .gitignore  CMakeLists.txt  README.md  download_script.py  main.cpp
Ragflix/: Program.cs  Ragflix.csproj  Ragflix.sln
Ragflix/Add/: Cil.cs  Commands.cs  Handlers.cs
Ragflix/Services/: TorrentClient.cs
Ragflix/cache/fastresume/: AB756D1B3887E47A044A6C41172C54475AF12964.fresume
Ragflix/cache/metadata/: AB756D1B3887E47A044A6C41172C54475AF12964.torrent
